--- a/Part 1 - Displaying Data/MonkeyFinder/AppShell.xaml
+++ b/Part 1 - Displaying Data/MonkeyFinder/AppShell.xaml
@@ -28,7 +28,7 @@
 
     <ShellContent
         Shell.NavBarIsVisible="true"
-        Title="Monkeys"
+        Title="Monkeys!!"
         ContentTemplate="{DataTemplate view:MainPage}"
         Route="MainPage" />
 
