--- a/Part 1 - Displaying Data/MonkeyFinder/App.xaml
+++ b/Part 1 - Displaying Data/MonkeyFinder/App.xaml
@@ -12,9 +12,16 @@
             <Color x:Key="LightBackground">#FAF9F8</Color>
             <Color x:Key="DarkBackground">Black</Color>
 
+            <Color x:Key="LabelText">#1f1f1f</Color>
+            <Color x:Key="LabelTextDark">White</Color>
+
+            <Color x:Key="CardBackground">White</Color>
+            <Color x:Key="CardBackgroundDark">#1c1c1e</Color>
+
+
             <Style TargetType="Page" ApplyToDerivedTypes="True">
                 <Setter Property="BackgroundColor"
-                        Value="{StaticResource LightBackground}" />
+                        Value="{AppThemeBinding Light={StaticResource LightBackground}, Dark={StaticResource DarkBackground}}" />
             </Style>
 
 			<Style ApplyToDerivedTypes="True" TargetType="NavigationPage">
@@ -25,7 +32,7 @@
 
             <Style TargetType="Label" x:Key="BaseLabel">
                 <Setter Property="FontFamily" Value="OpenSansRegular" />
-                <Setter Property="TextColor" Value="#1F1F1F" />
+                <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource LabelText}, Dark={StaticResource LabelTextDark}}" />
             </Style>
 
             <Style x:Key="MicroLabel" BasedOn="{StaticResource BaseLabel}" TargetType="Label">
@@ -49,7 +56,7 @@
             </Style>
             
             <Style x:Key="ButtonOutline" TargetType="Button">
-                <Setter Property="Background" Value="{StaticResource LightBackground}"/>
+                <Setter Property="Background" Value="{AppThemeBinding Light={StaticResource LightBackground}, Dark={StaticResource DarkBackground}}"/>
                 <Setter Property="TextColor" Value="{StaticResource Primary}"/>
                 <Setter Property="BorderColor" Value="{StaticResource Primary}"/>
                 <Setter Property="BorderWidth" Value="2"/>
@@ -60,7 +67,7 @@
                 <Setter Property="BorderColor" Value="#DDDDDD"/>
                 <Setter Property="HasShadow" Value="True"/>
                 <Setter Property="Padding" Value="0"/>
-                <Setter Property="Background" Value="{StaticResource LightBackground}"/>
+                <Setter Property="Background" Value="{AppThemeBinding Light={StaticResource CardBackground}, Dark={StaticResource CardBackgroundDark}}"/>
                 <Setter Property="CornerRadius" Value="10"/>
                 <Setter Property="IsClippedToBounds" Value="True"/>
             </Style>
